--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقع مولد أفكار المشاريع</title>
+    <title>مولد أفكار المشاريع</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>موقع مولد أفكار المشاريع</h1>
-        <select id="category-select">
-            <option value="tech">مشاريع تقنية</option>
-            <option value="mobile">تطبيقات موبايل</option>
-            <option value="product">منتجات جديدة</option>
-        </select>
+        <h1>مولد أفكار المشاريع</h1>
+        <div class="select-container">
+            <label for="category-select">اختر نوع المشروع:</label>
+            <select id="category-select">
+                <option value="tech">مشاريع تقنية</option>
+                <option value="mobile">تطبيقات موبايل</option>
+                <option value="product">منتجات جديدة</option>
+            </select>
+        </div>
         <button id="generate-btn">توليد فكرة جديدة</button>
         <div id="idea-container">
             <h2>الفكرة:</h2>
             <p id="idea-text">اضغط على زر توليد الفكرة للحصول على فكرة جديدة.</p>
         </div>
         <button id="translate-btn">ترجمة الفكرة</button>
+        <div id="translation-result"></div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
